--- a/src/stylesheets/Buttons.scss
+++ b/src/stylesheets/Buttons.scss
@@ -15,7 +15,7 @@
 .buttons {
   display: flex;
   flex-direction: row;
-  width: 180px;
+  width: 50%;
   justify-content: space-around;
   align-self: center;
   padding: 10px;
@@ -59,4 +59,11 @@
 
 #middle:active {
   background-color: #FF7C3F;
+}
+
+
+@media screen and (max-width: 599px) {
+  .buttons-wrapper{
+    width: 300px;
+  }
 }
