--- a/src/stylesheets/GameOver.scss
+++ b/src/stylesheets/GameOver.scss
@@ -1,8 +1,15 @@
 .game-over-wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 img {
   padding-top: 20px;
+}
+
+@media screen and (max-width: 599px) {
+  img{
+    width: 50%;
+  }
 }
