add media query to footer styling

--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -5,4 +5,17 @@
   img{
     height: 16px;
   }
+
+  a{
+    color: #5FCFDF;
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .footer {
+    width: 60%;
+  }
+  img{
+    width: 16px;
+  }
 }
